src/Base/main/default/objects/Product_Feature_Map__c/Product_Feature_Map__c.object-meta.xml
<CustomObject>
    <label>Product Feature Map</label>
    <nameField>
        <displayFormat>PFM-{0000}</displayFormat>
        <label>Product Feature Map ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Feature Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>