src/Base/main/default/objects/Product_Feature_Map__c/fields/Feature_Id__c.field-meta.xml
<CustomField>
    <fullName>Feature_Id__c</fullName>
    <label>Feature Id</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>Product Feature Maps</relationshipLabel>
    <relationshipName>Product_Feature_Maps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>