src/Base/main/default/objects/Product_Feature_Map__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product_Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Feature Maps</relationshipLabel>
    <relationshipName>Product_Feature_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>