src/Base/main/default/objects/Product_Feature_Map__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>